[package]
name = "sss"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sss"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.86"
prost = "0.13.5"
tokio = { version = "1.43.0", features = ["full"] }
tonic = "0.12.3"
anyhow = "1.0.95"
tonic-build = "0.12.3"
sled = "0.34.7"
raft = "0.7.0"
bincode = "1.3.3"
serde_json = "1.0.139"
serde = { version = "1.0.218", features = ["derive"] }
slog = "2.7.0"

[build-dependencies]
tonic-build = "0.12.3"
